--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="firstpage.html">Sample web page</a>
-    <a href="secondpage.html">My Profile</a>
-    <a href="thirdpage.html">My contacts</a>
-    <a href="Colors.html">Colors</a>
-    <a href="css.html">Use of CSS</a>
+    <a href="juma.html">Sample web page</a>
  <!--bodytag starts here-->
  <body bgcolor="Red">
 </body>
 <!--bodytag ends here-->
 <b><h1><marquee><u>Welcome page</u></marquee></h1></b>
-<img src="Jum.jpg" alt="height=100" width="150">
+
 <p><h2>We Welccome you to Guguei Nathaniel Garang Kucha's Website.</h2></p>
 <p>This is a basic Website of how to create a web site and upload it on the network through Github.com </p>
 </body>
