--- a/juma.html
+++ b/juma.html
@@ -66,6 +66,7 @@
         <header>
             <h1>Explore Nature</h1>
             <p>This website is dedicated to showing information about various ecosystems, wildlife, conservation efforts and outdoor activities</p>
+        <a href="index.html">Sample web page</a>
         </header>
     <main>
         <nav>
